[package]
name = "leetcode-rust"
version = "0.0.0"
authors = ["mickey-barron"]
description = "My solutions for LeetCode written in Rust"
edition = "2021"

[dependencies]
reqwest = "0.11.24"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.8.5"
regex = "1.3.4"
futures = { version = "0.3.3", features = ["thread-pool"] }
surf = "2.3.2"

[lib]
doctest = false
test = true
